# eero-client

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/eero/: __init__.py  __main__.py  api.py  cli.py  client.py  const.py  exceptions.py  formatting.py
src/eero/api/: __init__.py  ac_compat.py  auth.py  base.py  blacklist.py  burst_reporters.py  devices.py  diagnostics.py  eeros.py  forwards.py  insights.py  networks.py  ouicheck.py  password.py  profiles.py  reservations.py  routing.py  settings.py  support.py  thread.py  transfer.py  updates.py
src/eero/cli/: __init__.py  ac_compat.py  auth.py  blacklist.py  burst_reporters.py  devices.py  diagnostics.py  eeros.py  formatting.py  forwards.py  guest.py  insights.py  main.py  networks.py  ouicheck.py  password.py  profiles.py  reservations.py  routing.py  settings.py  speedtest.py  support.py  thread.py  transfer.py  updates.py  utils.py
src/eero/models/: __init__.py  account.py  device.py  diagnostics.py  eero.py  network.py  profile.py
