[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eero-client"
version = "1.0.0"
description = "Client library for interacting with Eero networks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Eero Client Contributors", email = "info@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "rich>=12.0.0",
    "typer>=0.9.0",
    "click>=8.0.0",
    "keyring>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=4.0.0",
    "black>=22.1.0",
    "isort>=5.10.0",
    "mypy>=0.931",
    "types-aiohttp>=3.8.0",
    "types-requests>=2.27.0",
    "ruff>=0.0.100",
    "pre-commit>=2.17.0",
]
doc = [
    "sphinx>=4.4.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
]

[project.urls]
Documentation = "https://github.com/yourusername/eero-client#readme"
Source = "https://github.com/yourusername/eero-client"
Issues = "https://github.com/yourusername/eero-client/issues"

[project.scripts]
eero = "eero.cli.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["eero"]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "W", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"